Add preparation for JS Heatmap